Embymalism.css
/* ===== Embymalism_4.9.5.0 20260709 ===== */

@import url('https://fonts.googleapis.com/css2?family=Sofia+Sans:ital,wght@0,1..1000;1,1..1000&display=swap');

/* ===== GRUNDLEGENDES STYLING ===== */
body {
  font-family: 'Sofia Sans', sans-serif;
}

html {
  background: radial-gradient(circle at 0% 100%, rgba(54, 66, 84, 0.55) 0%, rgba(54, 66, 84, 0.043) 70%, rgba(54, 66, 84, 0) 80%), radial-gradient(circle at 100% 100%, rgb(47 52 56 / 55%) 0%, rgba(113, 135, 153, 0.043) 70%, rgba(113, 135, 153, 0) 80%), radial-gradient(circle at 100% 0%, rgba(54, 66, 84, 0.55) 0%, rgba(54, 66, 84, 0.043) 70%, rgba(54, 66, 84, 0) 80%), radial-gradient(circle at 0% 0%, rgb(129 170 208 / 55%) 0%, rgba(91, 114, 135, 0.043) 70%, rgba(91, 114, 135, 0) 80%), rgb(0, 0, 0) !important;
}

img, div, button {
  image-rendering: -webkit-optimize-contrast;
}

/* ===== SPLASH SCREEN ===== */
.app-splash-container {
  background-image: url(https://i.imgur.com/WDXlX2s.jpeg) !important;
}

.app-splash {
  background-image: url(https://i.imgur.com/dfN83Ea.png) !important;
}

/* ===== CSS VARIABLEN ===== */
:root {
  --theme-primary-color: #14aadf !important;
  --theme-primary-color-hue: #14aadf !important;
  --theme-accent-text-color: #14aadf !important;
  --theme-primary-color-lightened: #14aadf !important;
  --theme-icon-focus-background: rgb(20 170 223 / 20%) !important;
  --theme-accent-text-color-darkbg: #14aadf!important;
  --theme-accent-text-color-lightbg: #14aadf!important;
}

:not(.layout-tv):root {
  --theme-background: !important;
  --header-blur-background: rgba(20, 20, 20, 0.66) !important;
  --drawer-background: #2C2C2E !important;
  --docked-drawer-background: rgba(0, 0, 0, 0.25) !important;
  --dialog-header-background: #2b323c !important;
  --button-background: #1f1f1f !important;
  --card-background: rgba(0, 0, 0, 0.15) !important;
  --footer-blur-background: rgba(29, 29, 31, 0.66) !important;
}

/* ===== LOGIN SEITEN ===== */
div.view-startup-manuallogin,
div.view-startup-login {
  background-image: url(https://i.imgur.com/WDXlX2s.jpeg);
}

/* ===== HEADER + SCROLLBAR ===== */
/*.emby-scroller {
    -ms-overflow-style: none !important;
    scrollbar-width: none !important;
}
*/

.skinHeader {
  height: auto!important;
  min-height: 45px!important;
  box-sizing: content-box;
  padding: 1em !important;
  margin: 0 auto;
  view-transition-name: none!important;
  margin-right: -15px !important; /* Scrollbar-Breite kompensieren */
  padding-right: 15px !important;
}

.skinHeader-withBackground.headroom-scrolling {
  -webkit-backdrop-filter: saturate(1) blur(20px) !important;
  backdrop-filter: saturate(1) blur(20px) !important;
  background-color: transparent !important;
  box-shadow: 0px 5px 25px 5px rgba(0,0,0,0.34) !important;
  border-bottom: 0.08em solid rgba(255, 255, 255, .08);
}

.skinHeader .headerLeft {
  padding-left: 0 !important;
}

.headerLeft .pageTitleWithDefaultLogo,
.headerTop h3.pageTitle.pageTitleWithLogo.pageTitleWithDefaultLogo {
  display: none !important;
}

.headerLeft.headerPartFixedWidth {
  z-index: 1;
}

div.headerLeft.headerSection.headerLeft-withdockeddrawer {
  padding-left: 130px !important;
}

h2.pageTitle.headerSectionItem {
  font-size: 1.66956521739130434em;
}

.headerMiddle {
  color: rgba(255, 255, 255, 0.6);
}

.headerMiddle button.emby-tab-button-active {
  color: #fff;
}

.headerMiddle.sectionTabs.headerMiddle-withSectionTabs {
  font-size: 12px;
}

.headerMiddle.sectionTabs.headerMiddle-withSectionTabs .emby-tab-button-active {
  background: rgb(255 255 255 / 10%) !important;
}

.headerLeft button {
  color: #f6f6f7;
}

button.headerBackButton.paper-icon-button-light {
  display: block !important;
}


/* Header Buttons - transparent mit blauem Hover */
button.headerBackButton.headerButton.headerSectionItem.paper-icon-button-light.headerBackButton-showfullscreen,
button.headerCastButton.headerButton.headerSectionItem.md-icon.paper-icon-button-light,
button.headerSearchButton.headerButton.headerSectionItem.md-icon.paper-icon-button-light.hiddenWhenBottomNavVisible,
button.headerUserButton.headerButton.headerSectionItem.paper-icon-button-light,
button.headerSettingsButton.headerButton.headerSectionItem.md-icon.paper-icon-button-light,
button.md-icon.secondaryText.btnVoiceInput.flex-shrink-zero.paper-icon-button-light,
button.btnServerMoreMenu.paper-icon-button-light,
button.btnRestartMenu.paper-icon-button-light,
button.listItemButton.itemAction.md-icon.paper-icon-button-light,
button.btnSelectCachePath.emby-input-iconbutton.paper-icon-button-light,
button.btnSelectCertPath.emby-input-iconbutton.paper-icon-button-light,
button.dataGridItemCell-button.btnConfigureGridColumns.itemAction.md-icon.secondaryText.paper-icon-button-light,
button.btnSelectCustomIntrosPath.emby-input-iconbutton.paper-icon-button-light,
button.btnSelectCodecIntrosPath.emby-input-iconbutton.paper-icon-button-light,
button.btnSelectUploadPath.emby-input-iconbutton.paper-icon-button-light,
.listItemImageContainer.listItemImageContainer-smallest.itemAction.listItemImageContainer-square.defaultCardBackground,
button.btnSelectBackupLocation.emby-input-iconbutton.paper-icon-button-light,
button.emby-input-iconbutton.paper-icon-button-light,
button.listItemButton.itemAction.paper-icon-button-light.icon-button-conditionalfocuscolor.removeItemBtn,
button.btnSessionSendMessage.paper-icon-button-light.itemAction.listItemButton,
button.btnEditVirtualChannel.listItemButton.paper-icon-button-light,
button.btnCopyVirtualChannel.listItemButton.paper-icon-button-light,
button.btnDeleteVirtualChannel.listItemButton.paper-icon-button-light,
i.md-icon.button-icon.button-icon-left.secondaryText.headerHelpButtonIcon,
.headerHelpButtonText,
.button-help {
  background: transparent !important;
  color: white;
  transition: background 0.3s ease !important;
  border-radius: 50% !important;
}
/* ... */

